Fix popup footer covering reference content
Links at the end of reference previews were covered by the footer
which made them unclickable.

Bug: T277364

--- a/src/ui/templates/popup/popup.less
+++ b/src/ui/templates/popup/popup.less
@@ -48,7 +48,9 @@
 		text-decoration: none;
 
 		footer {
-			padding: @popupPadding;
+			// T277364: The top padding doesn't have a visible effect anyway; this reduces the risk
+			// of the footer covering content
+			padding: 0 @popupPadding @popupPadding;
 			margin: 0;
 			font-size: 10px;
 			position: absolute;
